# lc-agent-research

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/lc_agent/: __main__.py  cli.py  pipeline.py  prompts.py  run_bundle.py  run_context.py
src/lc_agent/tools/: extract.py  fetch.py  search_tavily.py
